syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ticket.user_service.proto";
option java_outer_classname = "UserCreateProto";

package user;

service UserCreateService {
  rpc CreateUser (UserCreateRequest) returns (UserCreateResponse);
}

message UserCreateRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
  string userType = 5;
}

message UserCreateResponse {
  string message = 1;
}
