syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ticket.grpc";
option java_outer_classname = "AuthProto";

package auth;

service RegisterGrpc {
  rpc registration (RegistrationRequest) returns (RegistrationResponse);
}

message RegistrationRequest {
  string email =1;
  string password=2;
  string name=3;
  string userType=4;
  string confirmPassword=5;
}

message RegistrationResponse {
  string id=1;
  string email=2;
  string name=3;
}
